Wdrożenie mikroserwisu do obsługi wiadomości
